--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:theme="@style/Theme.ContractedFarming"
         tools:targetApi="31" >
         <activity
+            android:theme="@style/Theme.ContractedFarming.Login"
             android:name=".Login.LoginActivity"
             android:exported="false" />
         <activity
