--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
-
-    <uses-permission android:name="android.permission.INTERNET"/>
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -12,17 +10,26 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.ContractedFarming"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:theme="@style/Theme.ContractedFarming.Login"
-            android:name=".Login.LoginActivity"
+            android:name=".Login.SetProfileActivity"
             android:exported="false" />
+        <activity
+            android:name=".Anonymous.AnonymousActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Login.OTPAuthenticationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Login.LoginActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ContractedFarming.Login" />
         <activity
             android:name=".AppInfo.AppInfoActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,5 +37,7 @@
             </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
