complete till set profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,22 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ContractedFarming"
+        android:theme="@style/Theme.ContractedFarming.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".Manager.NewManager.ManagerApprovalWaitActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Manager.NewManager.NewManagerUploadActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Login.UserDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Admin.Dashboard.AdminDashboardActivity"
+            android:exported="false" />
+        <activity
+            android:theme="@style/Theme.ContractedFarming.Login"
             android:name=".Login.SetProfileActivity"
             android:exported="false" />
         <activity
@@ -19,7 +32,8 @@
             android:exported="false" />
         <activity
             android:name=".Login.OTPAuthenticationActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.ContractedFarming.Login" />
         <activity
             android:name=".Login.LoginActivity"
             android:exported="false"
