--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,18 +11,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ContractedFarming.NoActionBar"
         tools:targetApi="31">
+        <activity
+            android:name=".Farmer.NewFarmer.AddPlotActivity"
+            android:exported="false" />
 
-        <activity android:name=".Admin.Chat.AdminMessageActivity"/>
-        <activity android:name=".Admin.Chat.AdminSpecificChat.AdminSpecificChatActivity"/>
-        <activity android:name=".Admin.Notification.AdminNotificationActivity"/>
-        <activity android:name=".Admin.ManagerProfile.AdminManagerControlActivity"/>
-        <activity android:name=".Admin.FarmerControl.FarmerControlActivity"/>
-        <activity android:name=".Admin.FarmerControl.Profile.FarmerProfileActivity"/>
-
-        <activity android:name=".Admin.ManagerProfile.Profile.ManagerProfileActivity"/>
+        <activity
+            android:name=".Farmer.NewFarmer.NewFarmerApprovalWaitActivity"
+            android:exported="false" />
+        <activity android:name=".Admin.Chat.AdminMessageActivity" />
+        <activity android:name=".Admin.Chat.AdminSpecificChat.AdminSpecificChatActivity" />
+        <activity android:name=".Admin.Notification.AdminNotificationActivity" />
+        <activity android:name=".Admin.ManagerProfile.AdminManagerControlActivity" />
+        <activity android:name=".Admin.FarmerControl.FarmerControlActivity" />
+        <activity android:name=".Admin.FarmerControl.Profile.FarmerProfileActivity" />
+        <activity android:name=".Admin.ManagerProfile.Profile.ManagerProfileActivity" />
         <activity
             android:name=".Manager.Dashboard.ManagerDashboardActivity"
             android:exported="false" />
+
+        <activity android:name=".Farmer.Dashboard.FarmerDashboardActivity"/>
         <activity
             android:name=".Farmer.NewFarmer.NewFarmerUploadActivity"
             android:exported="false" />
@@ -62,9 +64,9 @@
             android:name=".AppInfo.AppInfoActivity"
             android:exported="false" />
         <activity
-            android:theme="@style/Theme.ContractedFarming.SplashScreen"
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.ContractedFarming.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -72,7 +74,8 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
