--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
         android:theme="@style/Theme.ContractedFarming.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".Farmer.Chat.ChatHelper.FarmerSpecificChatActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Farmer.Chat.ChatHelper.FarmerSearchUserActivity"
+            android:exported="true" />
+        <activity
             android:name=".Farmer.Chat.FarmerChatActivity"
             android:exported="false" />
         <activity android:name=".Farmer.Dashboard.ExplorePlants.PlantAddition.FarmerSelectFarmActivity" />
@@ -36,12 +42,16 @@
         <activity
             android:name=".Farmer.NewFarmer.NewFarmerUploadActivity"
             android:exported="false" />
-        <activity android:name=".Farmer.News.FarmerNewsActivity" android:exported="false" />
-        <activity android:name=".Farmer.ConferenceAndWorkShop.FarmerCandWActivity" android:exported="false"/>
-        <activity android:name=".Farmer.Notification.FarmerNotificationActivity" android:exported="false"/>
-
+        <activity
+            android:name=".Farmer.News.FarmerNewsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Farmer.ConferenceAndWorkShop.FarmerCandWActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Farmer.Notification.FarmerNotificationActivity"
+            android:exported="false" />
         <activity android:name=".Farmer.Dashboard.FarmerDashboardActivity" />
-
         <activity android:name=".Admin.Chat.AdminMessageActivity" />
         <activity android:name=".Admin.Chat.AdminSpecificChat.AdminSpecificChatActivity" />
         <activity android:name=".Admin.Notification.AdminNotificationActivity" />
@@ -52,15 +62,12 @@
         <activity
             android:name=".Manager.Dashboard.ManagerDashboardActivity"
             android:exported="false" />
-
-
         <activity
             android:name=".Manager.NewManager.ManagerApprovalWaitActivity"
             android:exported="false" />
         <activity
             android:name=".Manager.NewManager.NewManagerUploadActivity"
             android:exported="false" />
-
         <activity
             android:name=".Login.UserDetailsActivity"
             android:exported="false" />
