added request for new manager in farmer module

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,11 @@
         android:theme="@style/Theme.ContractedFarming.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".Farmer.Dashboard.FarmerMyManager.FarmerManagerActivity"
+            android:exported="false" />
+        <activity
             android:name=".Admin.Dashboard.Farmer.FarmerProfile.Profile.FarmerPlant.AdminFarmerPlantActivity"
-            android:exported="false"/>
-
+            android:exported="false" />
         <activity
             android:name=".Admin.AdminProfile.AdminProfileActivity"
             android:exported="false" />
